oko_common_ui: fix checkbox icon not visible when data-theme is not set

--- a/ui/oko_common_ui/src/checkbox/checkbox.module.scss
+++ b/ui/oko_common_ui/src/checkbox/checkbox.module.scss
@@ -16,17 +16,14 @@
   align-items: center;
 }
 
-[data-theme="light"] {
-  .checkboxInput {
-    color: var(--white);
-  }
-}
 [data-theme="dark"] {
   .checkboxInput {
     color: var(--gray-700);
   }
 }
+
 .checkboxInput {
+  color: var(--white);
   display: flex;
 
   justify-content: center;
